# HealthyFoods

./: .env.example  .gitignore  .sync-test  API_DOCUMENTATION.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SECURITY.md  SECURITY_SUMMARY.md  azure-pipelines.yml  azure-resources.json  azure-webapp.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml  publish.yml
app/: __init__.py  main.py
app/api/: catering_firms.py  customers.py  delivery.py  orders.py  payments.py
app/core/: config.py  security.py
app/models/: schemas.py
app/services/: ai_agent.py  azure_services.py
tests/: conftest.py  test_ai_agent.py  test_main.py  test_orders.py  test_security.py
