[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "healthyfoods"
version = "1.0.0"
description = "AI Agentic Food Ordering Platform – real-time order validation, payment, routing and delivery powered by Azure OpenAI"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "RoseTechCyber", email = "support@rosetechcyber.com" }]
keywords = ["ai", "food-ordering", "declarative-agent", "azure", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.1",
    "uvicorn[standard]==0.27.0",
    "pydantic[email]==2.5.3",
    "pydantic-settings==2.1.0",
    "python-multipart==0.0.22",
    "email-validator==2.1.0",
    "azure-identity==1.15.0",
    "azure-keyvault-secrets==4.7.0",
    "azure-storage-blob==12.19.0",
    "azure-servicebus==7.11.4",
    "azure-ai-contentsafety==1.0.0",
    "openai==1.10.0",
    "opencensus-ext-azure==1.1.13",
    "python-json-logger==2.0.7",
    "cryptography==46.0.5",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "sqlalchemy==2.0.25",
    "alembic==1.13.1",
    "redis==5.0.1",
    "hiredis==2.3.2",
    "httpx==0.26.0",
    "aiohttp==3.13.3",
    "python-dotenv==1.0.0",
    "pytz==2023.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-cov==7.0.0",
]

[project.urls]
Homepage = "https://github.com/RoseTechCyber/HealthyFoods"
Repository = "https://github.com/RoseTechCyber/HealthyFoods"
Issues = "https://github.com/RoseTechCyber/HealthyFoods/issues"

[project.scripts]
healthyfoods = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]
